# Mantis

./: .clang-format  .clang-tidy  .gitignore  README.md  meson.build
.github/workflows/: ci-audit.yml
include/mantis/: arena.hpp  fixed_capacity_box.hpp  net.hpp  protocol.hpp  server.hpp  types.hpp
src/: main.cpp  parser.cpp  server.cpp
src/net/: net.cpp
src/protocol/: protocol.cpp  protocol_debug.cpp
tests/: client.py  meson.build  tests.cpp
